refactor: moved mogock legacy importer to mongodb-springboot-springdata

--- a/mongodb-springboot-springdata/src/main/resources/application.yml
+++ b/mongodb-springboot-springdata/src/main/resources/application.yml
@@ -4,3 +4,4 @@ flamingock:
       code-packages:
         - io.flamingock.examples.mongodb.springboot.springdata.changes
   transactionEnabled: true
+  mongock-importer-source: mongockChangeLog
