feat: added legacy changeUnits to new stages

--- a/mongodb-springboot-springdata/src/main/resources/application.yml
+++ b/mongodb-springboot-springdata/src/main/resources/application.yml
@@ -3,5 +3,6 @@ flamingock:
     - name: stage1
       code-packages:
         - io.flamingock.examples.mongodb.springboot.springdata.changes
+        - io.flamingock.examples.mongodb.springboot.springdata.mongock
   transactionEnabled: true
   mongock-importer-source: mongockChangeLog
