--- a/mysql-standalone/src/main/resources/flamingock/stage1/2_create_client_table.yaml
+++ b/mysql-standalone/src/main/resources/flamingock/stage1/2_create_client_table.yaml
@@ -5,7 +5,7 @@ templateName: sql-template
 templateConfiguration:
     executionSql: |
         CREATE TABLE Clients (
-            PersonID in,
+            PersonID int,
             LastName varchar(255),
             FirstName varchar(255),
             Address varchar(255),
