refactor example structure
- each example is now its own project
- adding gradle files to each project
- modify build.gradle.kts in each project and standarize it
- ! remove sql-standalone as it works with the cloud
- ! remove mongodb-template as the last version of the template isn't yet in mavenCentral
(both removed projects will be added in the future)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,4 @@ jobs:
           java-version: '17'
 
       - name: Unit and Integration tests
-        run: ./gradlew clean build
+        run: ./misc/buildAll.sh
