--- a/.github/workflows/build_dispatched.yml
+++ b/.github/workflows/build_dispatched.yml
@@ -1,7 +1,6 @@
 name: Triggered Workflow
 on:
   workflow_call:
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,4 +15,4 @@ jobs:
           java-version: '17'
 
       - name: Unit and Integration tests
-        run: ./gradlew clean build
+        run: ./misc/buildAll.sh
