add README to all MongoDB-Springboot examples
also:
- add some comment in code for better understanding
- add console output when running tests with gradle
- add application plugin for run with gradle

--- a/mongodb/mongodb-springboot-springdata/src/main/resources/application.yml
+++ b/mongodb/mongodb-springboot-springdata/src/main/resources/application.yml
@@ -5,4 +5,4 @@ flamingock:
         - io.flamingock.examples.mongodb.springboot.springdata.mongock
         - io.flamingock.examples.mongodb.springboot.springdata.changes
   transactionEnabled: true
-  legacy-mongock-changelog-source: mongockChangeLog
+  legacy-mongock-changelog-source: mongockChangeLog # setting this for importing Mongock legacy audits
