add README to all Couchbase examples and fixes all examples for use the new library version
also:
- add some comment in code for better understanding
- add console output when running tests with gradle
- add application plugin for run with gradle

--- a/couchbase/couchbase-springboot-v2/src/main/resources/application.yml
+++ b/couchbase/couchbase-springboot-v2/src/main/resources/application.yml
@@ -15,4 +15,4 @@ flamingock:
     - name: stage1
       code-packages:
         - io.flamingock.examples.community.couchbase.changes
-  transactionEnabled: false
+  transactionDisabled: true
