--- a/mongodb/mongodb-springboot-springdata/src/main/resources/application.yml
+++ b/mongodb/mongodb-springboot-springdata/src/main/resources/application.yml
@@ -4,5 +4,5 @@ flamingock:
       code-packages:
         - io.flamingock.examples.mongodb.springboot.springdata.mongock
         - io.flamingock.examples.mongodb.springboot.springdata.changes
-  transactionEnabled: true
+  transactionDisabled: false
   legacy-mongock-changelog-source: mongockChangeLog # setting this for importing Mongock legacy audits
