--- a/mongodb/mongodb-springboot-v3-springdata-v4/src/main/resources/application.yml
+++ b/mongodb/mongodb-springboot-v3-springdata-v4/src/main/resources/application.yml
@@ -3,4 +3,4 @@ flamingock:
     - name: stage1
       code-packages:
         - io.flamingock.examples.community.changes
-  transactionEnabled: true
+  transactionDisabled: false
